--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,9 +3,9 @@
   width: 142px;
   height: 33px;
 }
-/* @media (max-width: 320px) {
+@media (max-width: 320px) {
   .header__logo {
-    width: 142px;
-    height: 42px;
+    width: 103.74px;
+    height: 24.4px;
   }
-} */
+}
