--- a/blocks/button/_add/button_add.css
+++ b/blocks/button/_add/button_add.css
@@ -3,4 +3,15 @@
   height: 50px;    
   border: 2px solid #FFFFFF;  
   align-self: center;
+  flex-shrink: 0;
 }
+@media (max-width: 320px) {
+  .button_add {
+    width: 282px;
+    height: 50px;
+  }
+  .button_add-image {
+    width: 16px;
+    height: 16px; 
+  }
+}  
