--- a/blocks/button/_edit/button_edit.css
+++ b/blocks/button/_edit/button_edit.css
@@ -5,4 +5,26 @@
     position: absolute;
     right: 0;
     top: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
   }
+  @media (max-width: 373px) {
+    .button_edit {
+      right: 0;
+      top: 8px;
+    }
+  }  
+  @media (max-width: 350px) {
+    .button_edit {
+      width: 18px;
+      height: 18px; 
+      right: 19px;
+      top: 34px;
+    }
+    .button_edit-image {
+      width: 7.5px;
+      height: 7.5px; 
+    }
+  }  
