--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,6 +1,11 @@
 .element__like {
-    height: 19px;
-    width: 22px;
-    padding-top: 5px;
-    padding-right: 5px;
-  }
+  height: 19px;
+  width: 22px;
+  padding-top: 5px;
+  padding-right: 5px;
+}
+.element__like:hover {
+  cursor: pointer;
+}
+
+
