--- a/blocks/element/__list/element__list.css
+++ b/blocks/element/__list/element__list.css
@@ -1,8 +1,11 @@
 .element__list {
-    display: flex;
-    flex-direction: column;
-    width: 282px;
-    height: 361px;
-    background: #FFFFFF;
-    border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 282px;
+  height: 361px;
+  background: #FFFFFF;
+  border-radius: 10px;
+}
+@media (max-width: 768px) {
+
 }
