--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,10 +4,8 @@
   font-size: 18px;
   color: #545454;
 }
-/* @media (max-width: 720px) {
+@media (max-width: 320px) {
   .footer__copyright{
-    line-height: 14px;
-    text-align: left;
-    align-self: flex-start;
+    font-size: 14px;
   }
-} */
+}
