--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,9 +5,11 @@
   opacity: 0.7;
   box-sizing: border-box;
 }
-/* @media (max-width: 320px) {
+@media (max-width: 320px) {
   .header {
-    padding-top: 16px;
+    padding-top: 28px;
+    padding-left: 27px;
+    padding-bottom: 31.6px;
   }
-} */
+}
 
