--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -6,3 +6,13 @@
   width: 336px;
   margin-left: 30px;
 }
+@media (max-width: 528px) {
+  .profile__description {
+    margin-left: 0;
+  }
+}  
+@media (max-width: 320px) {
+  .profile__description {
+    width: 282px;
+  }
+}  
