--- a/blocks/profile/__list/profile__list.css
+++ b/blocks/profile/__list/profile__list.css
@@ -1,3 +1,10 @@
 .profile__list {
   display: flex;  
 }
+@media (max-width: 528px) {
+  .profile__list {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+}
