--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,3 +6,17 @@
   line-height: 22px;
   color: #FFFFFF;  
 }
+@media (max-width: 528px) {
+  .profile__subtitle {
+    margin-top: 14px;
+    margin-bottom: 36px;
+    text-align: center;
+  }
+}  
+@media (max-width: 320px) {
+  .profile__subtitle {
+    font-size: 14px;
+    line-height: 17px;
+
+  }
+}  
