--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,22 @@
 .profile__title {
-    margin: 0;
-    font-weight: 500;
-    font-size: 42px;
-    line-height: 48px;
-    color: #FFFFFF;
+  margin: 0;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 48px;
+  color: #FFFFFF;
+}
+@media (max-width: 373px) {
+  .profile__title {
+    font-size: 30px;
+    line-height: 38px;
+    text-align: center;
   }
+}
+@media (max-width: 320px) {
+  .profile__title {
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+    margin-top: 26px;
+  }
+}
