--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,8 @@
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/button/button.css);
+@import url(../blocks/button/__image/_add/button__image_add.css);
+@import url(../blocks/button/__image/_edit/button__image_edit.css);
 @import url(../blocks/button/_edit/button_edit.css);
 @import url(../blocks/button/_add/button_add.css);
 @import url(../blocks/button/_submit/button_submit.css);
