--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,6 +5,8 @@
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media (max-width: 528px) {
   .profile__subtitle {
