--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -1,5 +1,5 @@
 .element__name {
     display: flex;
     justify-content: space-between;
-    margin: 25px 15px auto 21px;
+    margin: 25px 15px 31px 21px;
   }
