--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,6 +1,7 @@
 .element__title {
     margin: 0;
-    padding-right: 21px;
+    max-width: 198px;
+    width: 100%;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
