--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,3 +1,11 @@
+.element {
+  display: flex;
+  flex-direction: column;
+  width: 282px;
+  background: #FFFFFF;
+  border-radius: 10px;
+}
+
 @media (max-width: 768px) {
   .element {
     justify-self: center;
