--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,7 @@
 .header {
   padding-top: 44px;
   padding-bottom: 40px;
-  border-bottom: 1px solid #545454;
-  opacity: 0.7;
+  border-bottom: 1px solid rgba(33%, 33%, 33%, 0.7);
   box-sizing: border-box;
 }
 @media (max-width: 320px) {
