--- a/blocks/modal/__close/modal__close.css
+++ b/blocks/modal/__close/modal__close.css
@@ -6,7 +6,8 @@
   right: -40px;
   color: #ffff;
   z-index: 10;
-  cursor: pointer;
+  border: none;
+  background: none;
 }
 @media (max-width: 592px) {
   .modal__close {
