--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -4,15 +4,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 430px;
-  height: 330px;
   background-color: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   z-index: 10;
+  padding: 34px 36px 37px;
+  box-sizing: border-box;
 }
 @media (max-width: 592px) {
   .modal__form {
     width: 282px;
-    height: 322px;
+    padding: 25px 22px;
   }
 }
