--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-self: center;
   position: relative;
-  width: 336px;
+  max-width: 336px;
+  width: 100%;
   margin-left: 30px;
 }
 @media (max-width: 528px) {
@@ -13,6 +14,6 @@
 }
 @media (max-width: 320px) {
   .profile__description {
-    width: 282px;
+    max-width: 282px;
   }
 }
