--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,6 +4,8 @@
   font-size: 42px;
   line-height: 48px;
   color: #FFFFFF;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media (max-width: 373px) {
   .profile__title {
@@ -17,6 +19,5 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
-    margin-top: 26px;
   }
 }
