--- a/blocks/modal/__close/modal__close.css
+++ b/blocks/modal/__close/modal__close.css
@@ -8,6 +8,11 @@
   z-index: 10;
   border: none;
   background: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
 }
 @media (max-width: 592px) {
   .modal__close {
