--- a/pages/index.css
+++ b/pages/index.css
@@ -22,13 +22,21 @@
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/element__like_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/modal/__close/modal__close.css);
+@import url(../blocks/modal/__image/modal__image.css);
 @import url(../blocks/modal/__description/modal__description.css);
 @import url(../blocks/modal/__edit/modal__edit.css);
+@import url(../blocks/modal/__add/modal__add.css);
 @import url(../blocks/modal/__form/modal__form.css);
+@import url(../blocks/modal/__form/_img/modal__form_img.css);
 @import url(../blocks/modal/__overlay/modal__overlay.css);
 @import url(../blocks/modal/__overlay/_active/modal__overlay_active.css);
+@import url(../blocks/modal/__overlay/_img/modal__overlay_img.css);
 @import url(../blocks/modal/__title/modal__title.css);
+@import url(../blocks/modal/__title/_img/modal__title_img.css);
+@import url(../blocks/modal/__photo/modal__photo.css);
