--- a/blocks/modal/__form/_img/modal__form_img.css
+++ b/blocks/modal/__form/_img/modal__form_img.css
@@ -1,6 +1,4 @@
 .modal__form_img {
-  max-width: 75vw;
-  max-height: 75vh;
   background-color: transparent;
   padding: 0;
   box-shadow: none;
@@ -8,17 +6,9 @@
   display: flex;
   flex-direction: column;
 }
-/* @media (max-width: 592px) {
+@media (max-width: 320px) {
   .modal__form {
-    width: 282px;
-    padding: 25px 22px;
+    min-width: 240px;
+    height: 299px;
   }
-} */
-
-.modal__wrapper {
-  /* height: auto;
-  width: auto; */
-  overflow: hidden;
-  display: flex;
-  
 }
