--- a/blocks/modal/__overlay/modal__overlay.css
+++ b/blocks/modal/__overlay/modal__overlay.css
@@ -6,5 +6,7 @@
   left: 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 9;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
 }
