--- a/blocks/button/_submit/button_submit.css
+++ b/blocks/button/_submit/button_submit.css
@@ -10,6 +10,12 @@
   margin-top: 18px;
   border: none;
 }
+.button_submit-disabled {
+  border: 1px solid #000000;
+  background-color: #FFFFFF;
+  color: #000000;
+  opacity: 0.2;
+}
 @media (max-width: 592px) {
   .button_submit {
     width: 100%;
