--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,9 @@
 @import url(../blocks/modal/__close/modal__close.css);
 @import url(../blocks/modal/__image/modal__image.css);
 @import url(../blocks/modal/__description/modal__description.css);
+@import url(../blocks/modal/__description/_type/modal__description_type_error.css);
+@import url(../blocks/modal/__description-error/modal__description-error.css);
+@import url(../blocks/modal/__description-error/_active/modal__description-error_active.css);
 @import url(../blocks/modal/__edit/modal__edit.css);
 @import url(../blocks/modal/__add/modal__add.css);
 @import url(../blocks/modal/__form/modal__form.css);
