--- a/blocks/modal/__description-error/_active/modal__description-error_active.css
+++ b/blocks/modal/__description-error/_active/modal__description-error_active.css
@@ -1,7 +1,3 @@
 .modal__description-error_active {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #FF0000;
-  padding-top: 5px;
+  visibility: visible;
 }
