--- a/blocks/modal/__description/modal__description.css
+++ b/blocks/modal/__description/modal__description.css
@@ -1,16 +1,17 @@
 .modal__description {
-  width: 100%;
+  width: 98%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   color: #000000;
-  padding: 0 0 9px;
+  padding: 5px 3px 5px;
 }
+
 @media (max-width: 592px) {
   .modal__description {
-    width: 100%;
+    width: 98%;
   }
 }
 
