--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,17 +14,22 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/__image/_add/button__image_add.css);
 @import url(../blocks/button/__image/_edit/button__image_edit.css);
+@import url(../blocks/button/__image/_edit-avatar/button__image_edit-avatar.css);
 @import url(../blocks/button/_edit/button_edit.css);
+@import url(../blocks/button/_edit-avatar/button_edit-avatar.css);
 @import url(../blocks/button/_add/button_add.css);
 @import url(../blocks/button/_submit/button_submit.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__grade/element__grade.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__delete/_hidden/element__delete_hidden.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/element__like_active.css);
+@import url(../blocks/element/__like-counter/element__like-counter.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/modal/__close/modal__close.css);
