--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__list/profile__list.css);
 @import url(../blocks/profile/__image/profile__image.css);
+@import url(../blocks/profile/image-wrapper/profile__image-wrapper.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
